Bug 1925324 - Properly regenerate the underlying 'from' value, for SVG/SMIL to-animation of CSS properties r=dholbert

We need to remove the property in that case.

Differential Revision: https://phabricator.services.mozilla.com/D226030